--- a/Android/app/src/main/res/layout/fragment_monster.xml
+++ b/Android/app/src/main/res/layout/fragment_monster.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ScrollView
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -119,12 +118,12 @@
             android:layout_marginTop="8dp"
             android:layout_marginEnd="8dp"
             android:layout_marginBottom="8dp"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toStartOf="@+id/label_dex"
-            app:layout_constraintTop_toBottomOf="@+id/divider2"
             android:text="@string/strength_abbreviation"
             android:textAlignment="center"
-            android:textStyle="bold" />
+            android:textStyle="bold"
+            app:layout_constraintEnd_toStartOf="@+id/label_dex"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/divider2" />
 
         <TextView
             android:id="@+id/strength"
@@ -134,10 +133,10 @@
             android:layout_marginTop="8dp"
             android:layout_marginEnd="8dp"
             android:layout_marginBottom="8dp"
-            app:layout_constraintStart_toStartOf="@+id/label_str"
-            app:layout_constraintEnd_toEndOf="@+id/label_str"
-            app:layout_constraintTop_toBottomOf="@+id/label_str"
             android:textAlignment="center"
+            app:layout_constraintEnd_toEndOf="@+id/label_str"
+            app:layout_constraintStart_toStartOf="@+id/label_str"
+            app:layout_constraintTop_toBottomOf="@+id/label_str"
             tools:text="2 (-4)" />
 
         <!-- Dexterity -->
@@ -149,12 +148,12 @@
             android:layout_marginTop="8dp"
             android:layout_marginEnd="8dp"
             android:layout_marginBottom="8dp"
-            app:layout_constraintStart_toEndOf="@+id/label_str"
-            app:layout_constraintEnd_toStartOf="@+id/label_con"
-            app:layout_constraintTop_toBottomOf="@+id/divider2"
             android:text="@string/dexterity_abbreviation"
             android:textAlignment="center"
-            android:textStyle="bold" />
+            android:textStyle="bold"
+            app:layout_constraintEnd_toStartOf="@+id/label_con"
+            app:layout_constraintStart_toEndOf="@+id/label_str"
+            app:layout_constraintTop_toBottomOf="@+id/divider2" />
 
         <TextView
             android:id="@+id/dexterity"
@@ -164,10 +163,10 @@
             android:layout_marginTop="8dp"
             android:layout_marginEnd="8dp"
             android:layout_marginBottom="8dp"
-            app:layout_constraintStart_toStartOf="@+id/label_dex"
-            app:layout_constraintEnd_toEndOf="@+id/label_dex"
-            app:layout_constraintTop_toBottomOf="@+id/label_dex"
             android:textAlignment="center"
+            app:layout_constraintEnd_toEndOf="@+id/label_dex"
+            app:layout_constraintStart_toStartOf="@+id/label_dex"
+            app:layout_constraintTop_toBottomOf="@+id/label_dex"
             tools:text="20 (+5)" />
 
         <!-- Constitution -->
@@ -179,24 +178,24 @@
             android:layout_marginTop="8dp"
             android:layout_marginEnd="8dp"
             android:layout_marginBottom="8dp"
-            app:layout_constraintStart_toEndOf="@+id/label_dex"
-            app:layout_constraintEnd_toStartOf="@+id/label_int"
-            app:layout_constraintTop_toBottomOf="@+id/divider2"
             android:text="@string/constitution_abbreviation"
             android:textAlignment="center"
-            android:textStyle="bold" />
+            android:textStyle="bold"
+            app:layout_constraintEnd_toStartOf="@+id/label_int"
+            app:layout_constraintStart_toEndOf="@+id/label_dex"
+            app:layout_constraintTop_toBottomOf="@+id/divider2" />
 
         <TextView
             android:id="@+id/constitution"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textAlignment="center"
             android:layout_marginStart="8dp"
             android:layout_marginTop="8dp"
             android:layout_marginEnd="8dp"
             android:layout_marginBottom="8dp"
-            app:layout_constraintStart_toStartOf="@+id/label_con"
+            android:textAlignment="center"
             app:layout_constraintEnd_toEndOf="@+id/label_con"
+            app:layout_constraintStart_toStartOf="@+id/label_con"
             app:layout_constraintTop_toBottomOf="@+id/label_con"
             tools:text="8 (-1)" />
 
@@ -209,12 +208,12 @@
             android:layout_marginTop="8dp"
             android:layout_marginEnd="8dp"
             android:layout_marginBottom="8dp"
-            app:layout_constraintStart_toEndOf="@+id/label_con"
-            app:layout_constraintEnd_toStartOf="@+id/label_wis"
-            app:layout_constraintTop_toBottomOf="@+id/divider2"
             android:text="@string/intelligence_abbreviation"
             android:textAlignment="center"
-            android:textStyle="bold" />
+            android:textStyle="bold"
+            app:layout_constraintEnd_toStartOf="@+id/label_wis"
+            app:layout_constraintStart_toEndOf="@+id/label_con"
+            app:layout_constraintTop_toBottomOf="@+id/divider2" />
 
         <TextView
             android:id="@+id/intelligence"
@@ -224,10 +223,10 @@
             android:layout_marginTop="8dp"
             android:layout_marginEnd="8dp"
             android:layout_marginBottom="8dp"
-            app:layout_constraintStart_toStartOf="@+id/label_int"
-            app:layout_constraintEnd_toEndOf="@+id/label_int"
-            app:layout_constraintTop_toBottomOf="@+id/label_int"
             android:textAlignment="center"
+            app:layout_constraintEnd_toEndOf="@+id/label_int"
+            app:layout_constraintStart_toStartOf="@+id/label_int"
+            app:layout_constraintTop_toBottomOf="@+id/label_int"
             tools:text="10 (+0)" />
 
         <!-- Wisdom -->
@@ -239,12 +238,12 @@
             android:layout_marginTop="8dp"
             android:layout_marginEnd="8dp"
             android:layout_marginBottom="8dp"
-            app:layout_constraintStart_toEndOf="@+id/label_int"
-            app:layout_constraintEnd_toStartOf="@+id/label_cha"
-            app:layout_constraintTop_toBottomOf="@+id/divider2"
             android:text="@string/wisdom_abbreviation"
             android:textAlignment="center"
-            android:textStyle="bold" />
+            android:textStyle="bold"
+            app:layout_constraintEnd_toStartOf="@+id/label_cha"
+            app:layout_constraintStart_toEndOf="@+id/label_int"
+            app:layout_constraintTop_toBottomOf="@+id/divider2" />
 
         <TextView
             android:id="@+id/wisdom"
@@ -254,10 +253,10 @@
             android:layout_marginTop="8dp"
             android:layout_marginEnd="8dp"
             android:layout_marginBottom="8dp"
-            app:layout_constraintStart_toStartOf="@+id/label_wis"
-            app:layout_constraintEnd_toEndOf="@+id/label_wis"
-            app:layout_constraintTop_toBottomOf="@+id/label_wis"
             android:textAlignment="center"
+            app:layout_constraintEnd_toEndOf="@+id/label_wis"
+            app:layout_constraintStart_toStartOf="@+id/label_wis"
+            app:layout_constraintTop_toBottomOf="@+id/label_wis"
             tools:text="14 (+2)" />
 
         <!-- Charisma -->
@@ -269,12 +268,12 @@
             android:layout_marginTop="8dp"
             android:layout_marginEnd="8dp"
             android:layout_marginBottom="8dp"
-            app:layout_constraintStart_toEndOf="@+id/label_wis"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/divider2"
             android:text="@string/charisma_abbreviation"
             android:textAlignment="center"
-            android:textStyle="bold" />
+            android:textStyle="bold"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toEndOf="@+id/label_wis"
+            app:layout_constraintTop_toBottomOf="@+id/divider2" />
 
         <TextView
             android:id="@+id/charisma"
@@ -284,10 +283,10 @@
             android:layout_marginTop="8dp"
             android:layout_marginEnd="8dp"
             android:layout_marginBottom="8dp"
-            app:layout_constraintStart_toStartOf="@+id/label_cha"
-            app:layout_constraintEnd_toEndOf="@+id/label_cha"
-            app:layout_constraintTop_toBottomOf="@+id/label_cha"
             android:textAlignment="center"
+            app:layout_constraintEnd_toEndOf="@+id/label_cha"
+            app:layout_constraintStart_toStartOf="@+id/label_cha"
+            app:layout_constraintTop_toBottomOf="@+id/label_cha"
             tools:text="15 (+2)" />
 
         <ImageView
@@ -425,13 +424,13 @@
         <!-- Abilities -->
         <LinearLayout
             android:id="@+id/abilities"
-            android:orientation="vertical"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginStart="8dp"
             android:layout_marginTop="0dp"
             android:layout_marginEnd="8dp"
             android:layout_marginBottom="0dp"
+            android:orientation="vertical"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/challenge"
@@ -445,10 +444,10 @@
             android:layout_marginTop="8dp"
             android:layout_marginEnd="8dp"
             android:layout_marginBottom="8dp"
+            android:text="@string/actions_label"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/abilities"
-            android:text="@string/actions_label" />
+            app:layout_constraintTop_toBottomOf="@+id/abilities" />
 
         <ImageView
             android:id="@+id/divider4"
@@ -468,13 +467,13 @@
         <!-- Actions -->
         <LinearLayout
             android:id="@+id/actions"
-            android:orientation="vertical"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginStart="8dp"
             android:layout_marginTop="0dp"
             android:layout_marginEnd="8dp"
             android:layout_marginBottom="0dp"
+            android:orientation="vertical"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/divider4"
