--- a/Android/app/src/main/res/layout/fragment_edit_basic_info.xml
+++ b/Android/app/src/main/res/layout/fragment_edit_basic_info.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -20,8 +19,6 @@
                 android:id="@+id/name"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:focusable="true"
-                android:focusableInTouchMode="true"
                 android:hint="@string/label_name"
                 android:importantForAutofill="no"
                 android:inputType="textCapWords"
@@ -89,23 +86,8 @@
         </com.google.android.material.textfield.TextInputLayout>
 
         <!-- Hit Dice (int) -->
-        <com.majinnaibu.monstercards.ui.components.Stepper
-            android:id="@+id/hitDice"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_margin="@dimen/text_margin"
-            app:label="@string/label_hit_dice"
-            app:maxValue="99"
-            app:minValue="1"
-            app:stepAmount="1" />
 
-        <com.google.android.material.switchmaterial.SwitchMaterial
-            android:id="@+id/hasCustomHitPoints"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_margin="@dimen/text_margin"
-            android:text="@string/label_has_custom_hp"
-            android:textAppearance="@android:style/TextAppearance.Material.Medium" />
+        <!-- Has ustom HP (boolean) -->
 
         <com.google.android.material.textfield.TextInputLayout
             android:layout_width="match_parent"
